docs: standardize complete native image header across all apps and AGENTS.md